objects/nFORCE__Business_Process__c.object
<CustomObject>
    <description>This object defines the business process the system runs to orchestrate business activities. This process may consist of one or more business activities the system runs to complete a business process.</description>
    <fields>
        <fullName>nFORCE__Category__c</fullName>
        <description>The user populates this optional text field to indicate the category in which the process operates. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This text field contains the business process type.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Enable_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable logging during the BPO Business Process.</description>
        <inlineHelpText>Select this checkbox to enable logging during your BPO Business Process.</inlineHelpText>
        <label>Enable Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Enable_Method_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable logging upon method entrance and exit.</description>
        <inlineHelpText>Select this checkbox to enable logging upon method entrance and exit. **Note**: This will greatly increase the size of the logs included in your output.</inlineHelpText>
        <label>Enable Method Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Encrypt_Business_Activity_State__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Administrators populate this optional checkbox field that, when set to true, encrypts the state data of the business activities. The default is true.</description>
        <inlineHelpText>Select checkbox to encrypt the state data of the business activities.</inlineHelpText>
        <label>Encrypt Business Activity State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Include_Logs_In_Output__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable logs in output.</description>
        <inlineHelpText>Select this checkbox to enable logs in output.</inlineHelpText>
        <label>Include Logs in Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Key__c</fullName>
        <description>The user populates this required unique text field to provide an identifier for business process identification purposes. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This text field identifies a business process.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Log_Level_To_Capture__c</fullName>
        <description>Select the appropriate log level to capture for this process. - ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST.</description>
        <inlineHelpText>Using this optional field, administrators can select a log level to capture for the process to communicate what occurred during the execution. The options available are ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST.</inlineHelpText>
        <label>Log Level To Capture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Finer</fullName>
                </value>
                <value>
                    <fullName>Finest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Log_Provider__c</fullName>
        <description>Administrators populate this optional text field with the fully qualified Class Name for the ALogProvider extending class.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the fully-qualified class name for the ALogProvider extending class.</inlineHelpText>
        <label>Log Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Override_Custom_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable override of Business Process custom settings</description>
        <inlineHelpText>Select this checkbox to override the Business Process custom settings.</inlineHelpText>
        <label>Override Custom Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>This field contains an external identifier that is used to associate the record with the correlating record in an external system. The Lookup Key can also be used to identify related records when importing data into nCino without the need to know the internal ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the External ID for the Business Process.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Process</label>
    <listViews>
        <fullName>nFORCE__All_Business_Processes</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Key__c</columns>
        <columns>nFORCE__Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Business Processes</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>nFORCE__Enforce_Unique_Name</fullName>
        <active>true</active>
        <description>This validation rule enforces that the business process field name is unique.</description>
        <errorConditionFormula>AND (
			IF($Setup.nFORCE__Business_Process_Settings__c.nFORCE__Disable_Validation_Rules__c,
				FALSE,
				((ISNEW() || ISCHANGED(Name))
				&amp;&amp; VLOOKUP( $ObjectType.nFORCE__Business_Process__c.Fields.Name, $ObjectType.nFORCE__Business_Process__c.Fields.Name , Name) = Name)
			)
		)</errorConditionFormula>
        <errorMessage>The business process name must be unique. Check the name and try again.</errorMessage>
    </validationRules>
</CustomObject>